--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,3 @@
 [build]
 publish = "public"
-command = "hugo --theme=mainroad --buildDrafts --gc --minify"
+command = "hugo --theme=mainroad --gc --minify"
