--- a/config.toml
+++ b/config.toml
@@ -6,19 +6,17 @@ title = "yussi laboratory"
 theme = "hugo_theme_robust"
 
 [Params]
-  description = "備忘録用メモサイト"
+#  description = "趣味のカメラや旅行、コンピュータの話などを気まぐれで。"
   twitter_cards = true
   readmore = true
+  enableHighlight = true # highlight.js option
 
-[Params.sidebar]
-  home = "right"
-  list = "left"
-  single = "right"
-  widgets = ["social", "recent", "taglist"]
+[params.author]
+#thumbnail = "images/author.jpg"
+name = "yussi"
+description = "<p>趣味はコンピュータ、カメラ、ラジオ、鉄道旅行など。思いついたことを適当に書きます。</p>"
+twitter = "https://twitter.com/yussi_macs"
+github = "https://github.com/yussi"
 
-[Params.widgets]
-  recent_num = 5 # Set the number of articles in the "Recent articles" widget
-  tags_counter = false # Enable counter for each tag in "Tags" widget (disabled by default)
-
-[Params.widgets.social]
-  twitter = "yussi_macs"
+[outputs]
+page = [ "HTML", "AMP" ] # if you want AMP enable.
